tests/baselines/reference/abstractPropertyBasics(strict=true).errors.txt
abstractPropertyBasics.ts(19,5): error TS2564: Property 'readonlyProp' has no initializer and is not definitely assigned in the constructor.


==== abstractPropertyBasics.ts (1 errors) ====
    interface A {
        prop: string;
        raw: string;
        m(): void;
    }
    abstract class B implements A {
        abstract prop: string;
        abstract raw: string;
        abstract readonly ro: string;
        abstract get readonlyProp(): string;
        abstract set readonlyProp(val: string);
        abstract m(): void;
    }
    class C extends B {
        get prop() { return "foo"; }
        set prop(v) { }
        raw = "edge";
        readonly ro = "readonly please";
        readonlyProp: string; // don't have to give a value, in fact
        ~~~~~~~~~~~~
!!! error TS2564: Property 'readonlyProp' has no initializer and is not definitely assigned in the constructor.
        m() { }
    }